deployment/mock_daps_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mockdaps
  name: mockdaps
spec:
  ports:
  - name: https
    port: 44300
    protocol: TCP
    targetPort: 44300
  selector:
    app: mockdaps
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mockdaps
  name: mockdaps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockdaps
  template:
    metadata:
      annotations:
        "scheduler.alpha.kubernetes.io/critical-pod": ""
        sidecar.istio.io/inject: "false"
      labels:
        app: mockdaps
    spec:
      containers:
      - image: "boost/mockdaps:latest"
        imagePullPolicy: Never
        name: mockdaps
        ports:
        - containerPort: 44300
          name: https
