deployment/orion_adapter_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orionadapterservice
  namespace: istio-system
  labels:
    app: orionadapter
spec:
  type: ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 43210
    targetPort: 43210
  selector:
    app: orionadapter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orionadapter
  namespace: istio-system
  labels:
    app: orionadapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orionadapter
  template:
    metadata:
      labels:
        app: orionadapter
      annotations:
        sidecar.istio.io/inject: "false"
        scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      containers:
      - name: orionadapter
        image: boost/orionadapter:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 43210
