deployment/orion_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orion
  name: orion
spec:
  ports:
  - name: ngsi
    port: 1026
    protocol: TCP
    targetPort: 1026
  selector:
    app: orion
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orion
  name: orion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
      - command:
        - /usr/bin/contextBroker
        - "-fg"
        - "-multiservice"
        - "-ngsiv1Autocast"
        - "-dbhost"
        - "mongodb-logLevel"
        - DEBUG
        image: "fiware/orion:2.2.0"
        imagePullPolicy: IfNotPresent
        name: orion
        ports:
        - containerPort: 1026
          name: ngsi
