deployment/egress_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: orion-egress-filter
  namespace: default
spec:
  workloadSelector:
    labels:
      app: httpbin
  configPatches:
  # The first patch adds the lua filter to the listener/http connection manager
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        portNumber: 80
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.router"
    patch:
      operation: INSERT_BEFORE
      value: # lua filter specification
        name: envoy.lua
        config:
          inlineCode: |
            function envoy_on_request(request_handle)
              local headers, body = request_handle:httpCall(
                    "lua_cluster", {
                          [":method"] = "GET",
                          [":path"] = "/",
                          [":authority"] = "lua_cluster"}, "", 5000)
              request_handle:headers():add("header", body)
            end
  # The second patch adds the cluster that is referenced by the lua code
  # cds match is omitted as a new cluster is being added
  - applyTo: CLUSTER
    # match:
    #   context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value: # cluster specification
        name: "lua_cluster"
        type: STRICT_DNS
        connect_timeout: 5.5s
        lb_policy: ROUND_ROBIN
        hosts:
        - socket_address:
            protocol: TCP
            address: "orionadapterservice.istio-system"
            port_value: 54321
